completed question 2 including junit tests and also added tests for q1